# Good-Display-esp32c6

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md
components/gde_display/: CMakeLists.txt  assets.cpp  assets.h  epd_driver.cpp  epd_driver.h  ft6336.cpp  ft6336.h
main/: CMakeLists.txt  epd_driver.cpp  epd_driver.h  main.cpp  usb_cdc.cpp  usb_cdc.h  usb_cdc_stub.cpp
